typo fix on subtitle

--- a/essay-template.tex
+++ b/essay-template.tex
@@ -59,7 +59,7 @@
 
 \title{\Large{Essay Template (Title)}\\
 \vspace*{.75em}
-\large{Subttle (if any)}\\
+\large{Subtitle (if any)}\\
 \vspace*{.75em}
 \small\textit{Now available for non-commercial use sharing.}}
 \author{\large{by [Author Name]}}
